# meteoswiss-forecast-store

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
meteoswiss_forecast_store/: __init__.py  ingest_icon_ogd.py
meteoswiss_nwp_store/: ingest_icon_ogd.py
notebooks/: explore-ch1-eps-fc.ipynb  store-access.ipynb
