[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "meteoswiss-forecast-store"
version = "0.1.0"
description = "MeteoSwiss Forecast Store using Icechunk"
authors = [{name = "Martí Bosch", email = "marti.bosch@unibe.ch"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/martibosch/meteoswiss-forecast-store"

[tool.codespell]
ignore-regex = '^\s*"image\/png":\s.*'
skip = "CHANGELOG.md,pixi.lock"

[tool.pixi.dependencies]
ipykernel = ">=7.1.0,<8"
pre-commit = ">=4.4.0,<5"
python = "==3.13"
just = ">=1.40.0,<2"
modal-client = ">=1.3.4,<2"
arraylake = ">=0.31.0,<0.32"
boto3 = ">=1.42.73,<2"
xarray = ">=2026.2.0,<2027"
matplotlib = ">=3.10.8,<4"
cartopy = ">=0.25.0,<0.26"

[tool.pixi.pypi-dependencies]
meteoswiss_forecast_store = {path = ".", editable = true}

[tool.pixi.workspace]
authors = ["Martí Bosch marti.bosch@unibe.ch>"]
channels = ["conda-forge", "bioconda"]
name = "meteoswiss-forecast-store"
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
version = "0.1.0"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["meteoswiss_forecast_store"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "meteoswiss_forecast_store"
module-root = ""
